--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -24,3 +24,13 @@
     </div>
   </div>
 </div>
+
+
+<div class="loader-overlay" *ngIf="isLoading">
+  <div class="loader">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
